# sot-dyninv

./: CMakeLists.txt  package.xml
include/: CMakeLists.txt
python/: CMakeLists.txt
python/2013_coursens/: p105_demo_romeo.py
src/: CMakeLists.txt  contact-selecter.cpp  solver-kine.cpp
